# FAINT

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/jetson/: Dockerfile  build.sh  docker-compose.yml  ros_entrypoint.sh  up.sh
docker/jetson/usb_cam/: Dockerfile.usb_cam  build_usb_cam.sh  launch_usb_cam.sh
docker/jetson/zed2/: Dockerfile.zed  build_zed.sh
docker/pc/: Dockerfile  build.sh  docker-compose.yml  ros_entrypoint.sh  up.sh
faint/common/: constants.py  utils.py
faint/common/models/: faint.py  layers.py  vint_ddp.py
faint/deployment/: record_bag.sh  requirements.txt
faint/train/: __init__.py  environment_py310.yml  run.py
faint/train/config/: default_structured_configs.py  toponav_base_config.yaml  toponav_registry.py
faint/train/data_utils/: data_module.py  demo_handler.py  huggingface_utils.py  trajectory_accumulator.py  trajectory_dataset.py  types.py  utils.py
faint/train/habitat/: __init__.py  agents.py  continuous_path_follower.py  dagger_trainer.py  distributed.py  habitat_venv_factory.py  toponav_task.py  utils.py  velocity_integration.py  viz_utils.py
faint/train/tools/: datamodule_examine.py  export_ckpt_to_torchscript.py
faint/train/train_utils/: __init__.py  lightning_trainer.py  lightning_wrappers.py  losses.py  utils.py
slurm_tools/: dl_mahti_weights.sh  dl_offlinevint_puhti_weights.sh  dl_puhti_weights.sh  dl_sauna_real.sh  dl_sauna_weights.sh  mahti_make_env.sh  mahti_submit.sh  mahti_test_submit.sh  post_install.sh  puhti_submit.sh  puhti_test_submit.sh  sauna_eval.sh  sauna_submit.sh  sauna_test_submit.sh
(+54 files in other folders)
